# mexpress

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements-dev.txt  test.py
.github/workflow/: test.yml
.github/workflows/: publish.yml  test.yml
demo/: evaluators.py  opt.py
mexpress/: __init__.py
py/: demo.py
py/demo/: evaluators.py  opt.py
py/mexpress/: __init__.py
py/test/: test.py
src/: lib.rs
test/: test_meta.py  test_mexpress.py
