# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "mexpress"
version = "0.1.7"
edition = "2021"
repository = "https://github.com/bertiqwerty/mexpress"
license = "MIT"

[lib]
name = "mexpress"
crate-type = ["cdylib"]

[dependencies]
exmex = { version = "0.20.4", features = ["partial"] }
numpy = "0.24.0"
num = "0.4.3"
pyo3 = { version = "0.24.0", features = ["extension-module"] }
