[project]
name = "mexpress"
dependencies = ["numpy"]
description = "Math parser and evaluator capable of computing gradients and Hessians."
readme = "README.md"
version = "0.1.5"
requires-python = ">=3.8"
[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.ruff]
ignore = ["E731"]
